--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 26
     defaultConfig {
-        applicationId "februarybreeze.github.io.smstodingtalk"
+        applicationId "net.yonsm.SMS2Ding"
         minSdkVersion 19
         targetSdkVersion 26
         versionCode 1
